--- a/conversion.css
+++ b/conversion.css
@@ -1,44 +1,80 @@
 
+/**/
 .topPage{
 
-	margin-top: 70px;
-	margin-bottom: 30px;
-}
-
-#myPage{
-	background-color: #dee0e2;
-}
-
-#butDiv{
-	
-	margin-top: 40px;
-	text-align: center;
-}
-
-#finalCon{
-	font-size: 30px;
 	margin-top: 30px;
 	margin-bottom: 30px;
+}
+
+/**/
+#myPage{
+	background-color: #dee0e2;
+	border: 1px solid;
+	border-top: 0;
+}
+
+#myFoot{
+	background-color: #337ab7;
+	text-align: center;
+	padding-bottom:10px;
+	border-width:1px;
+	border-style: solid;
+	border-color: black;
+	padding: 35px; 
+	border-top: 0px;
+}
+
+/*Top Bar Row Style*/
+#myNav{
+	background-color: #337ab7;
+	text-align: center;
+	padding-bottom:10px;
+	border-width:1px;
+	border-style: solid;
+	border-color: black; 
+}
+
+/*Top Row Header Style*/
+#navHead{
+	color:#fff;
+	text-decoration: underline;
+}
+
+/**/
+#butDiv{	
+	margin-top: 30px;
 	text-align: center;
 }
 
+/**/
+#finalCon{
+	font-size: 30px;
+	margin-top: 50px;
+	margin-bottom: 50px;
+	text-align: center;
+}
+
+/**/
 #conBut{
 	background-color: #ddeaff;
 	font-size: 25px;
 	width: 100%;
 }
 
+/**/
 #resetBut{
     text-align: center;
-    margin-bottom: 70px;
+    margin-bottom: 90px;
 }
 
+/**/
 .listHeader{
 	font-size: 30px;
 	text-align: center;
     margin-bottom: 30px;
 }
 
+/**/
 .dropdown-backdrop{
     position: static;
 }
